# dicectf-quals-2025-challenges

./: README.md
biocomputing/: .gitignore  Makefile  create_dist_archive.sh  prepare.py  pyproject.toml
biocomputing/assembler/: Makefile  assembler.py  hello.py  pyproject.toml
biocomputing/bioarm/: .gitignore  Makefile  bioarm.proto  bioarm.py  pyproject.toml
biocomputing/bioarm_test/: Makefile  client.py  debugger.py  pyproject.toml  verilog_test.py
biocomputing/clock_test/: oscillator.py  requirements.txt
biocomputing/dist-testing/: Dockerfile  README.md  docker-compose.yml  start.sh
biocomputing/harness/: Makefile  circuit.py  input.json  model.py  pyproject.toml  run_verilog.py  runner.py  synth.py  tests.py
biocomputing/latex/: .gitignore  cpu_documentation.tex
biocomputing/server/: README.md  main.py  pyproject.toml
biocomputing/simulator/: .gitignore  Makefile  pyproject.toml
biocomputing/simulator/src/: __init__.py  cli.py  simulator.py
biocomputing/simulator/tests/: test_simulator.py
biocomputing/solves/: 1.sh  2.sh  start.html  test.html
biocomputing/verilog/: Makefile  all2nor.v  nand.lib  pyproject.toml  synth.py
crypto/fairy-ring/: challenge.yml
crypto/nil-circ/: challenge.yml
crypto/satisfied/: challenge.yml
crypto/vorpal-sword/: challenge.yml
crypto/winxy-pistol/: challenge.yml
misc/bcu-binding/: challenge.yml
misc/convenience-store/: README.md  challenge.yml
misc/cppickle/: challenge.yml  flag.txt  solve.py
misc/dicecap/: challenge.yml
misc/golden-bridge/: challenge.yml  create_handout  pyproject.toml
misc/golden-bridge/eth/src/: Bridge.sol  Bubble.sol  Feather.sol  Setup.sol
misc/golden-bridge/solve/: solve.py
pwn/bassoon/: pwn  (+12 more)
rev/dicetok/: Cargo.toml  README.md  challenge.yml
rev/dicetok/solve/: Cargo.toml
rev/dicetok/solve/src/: main.rs
rev/dicetok/src/: main.rs
(+174 files in other folders)
