[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulator"
version = "0.1.0"
description = "Circuit simulator for synthesized Verilog designs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
