[tool.poetry]
name = "bridge"
version = "2.8.25"
authors = ["DiceGang <team@dicega.ng>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
web3 = "^7.9.0"
solders = "^0.26.0"
solana = "^0.36.6"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
